--- a/turnos.html
+++ b/turnos.html
@@ -29,6 +29,6 @@
   </footer>
 
 
-  <script src="./script.js" type="module"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
